syntax = "proto3";
package hello;

service WorkerGreeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string message = 1;
}

message HelloReply {
  string reply = 1;
}
